# rustfinal

./: Cargo.toml  README.md
src/: hash_cash_challenge.rs  main.rs  monstrous_maze_challenge.rs
src/monstrous_maze_challenge/: challenge_trait.rs
