[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]

rand = "0.8.5"
clap = "3.1.18"
md5 = "0.7.0"
serde = { version="1", features=["derive"]}
serde_json = "1"
# [workspace]
# members = ["client","shared"]
